Dropdown options finished

--- a/src/Index.css
+++ b/src/Index.css
@@ -12,6 +12,14 @@
 
 @layer base {
   @font-face {
+    font-family: 'Geist-Medium';
+    font-style: normal;
+    src: url(src/assets/fonts/Geist-Medium.woff2) format('woff2');
+  }
+}
+
+@layer base {
+  @font-face {
     font-family: 'Geist-Bold';
     font-style: normal;
     src: url(src/assets/fonts/Geist-Bold.woff2) format('woff2');
